--- a/thesis.bib
+++ b/thesis.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Tue, 26 Nov 2013.
+%% Created using Papers on Thu, 28 Nov 2013.
 %% http://papersapp.com/papers/
 
 @book{Altenkirch:2003kz,
@@ -2578,6 +2578,26 @@ year = {1984},
 pages = {272--282},
 publisher = {ACM Press},
 address = {New York, New York, USA}
+}
+
+@article{Dyer:1993bk,
+author = {Dyer, Charles C and Ip, Peter S S},
+title = {{Softening in N-body simulations of collisionless systems}},
+journal = {The Astrophysical Journal},
+year = {1993},
+volume = {409},
+number = {1},
+pages = {60--67},
+month = jun
+}
+
+@book{Aarseth:2003uz,
+author = {Aarseth, Sverre Johannes},
+title = {{Gravitational N-Body Simulations: Tools and Algorithms}},
+publisher = {Cambridge University Press},
+year = {2003},
+series = {Cambridge Monographs on Mathematical Physics},
+edition = {1}
 }
 
 @inproceedings{Claessen:2012hl,
