sec 3: richly typed terms

--- a/sections/04-implementation.tex
+++ b/sections/04-implementation.tex
@@ -308,6 +308,7 @@ TK: stencil
 
 
 \section{Manipulating embedded programs}
+\label{sec:manipulating_embedded_programs}
 
 The Accelerate core language is richly typed, maintaining full type information
 of the embedded language in the term tree. In order to apply transformations to
