--- a/thesis.bib
+++ b/thesis.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Thu, 28 Nov 2013.
+%% Created using Papers on Fri, 29 Nov 2013.
 %% http://papersapp.com/papers/
 
 @book{Altenkirch:2003kz,
@@ -1071,7 +1071,7 @@ pages = {12034},
 annote = {Compares three HPC languages under development, Chapel, Fortress, and X10. These are new, high-level languages with support for object oriented and generic programming, and provide a broad range of contstructs for expressing both task and data parallelism at multiple levels, with a global view of data. A good background on related (now, historical) work. MPI combined with a sequential language, often coupled with OpenMP as well. Failure of HPF, an early attempt at a truly parallel language that pushed too far, too soon. CAF, UPC and Titanium, which provide only minimal extensions to their base languages. ZPL, which demonstrated a high-level approach to array operations (s.c. NESL?). Provides two fairly detailed examples of parallel expression in these languages with a finite difference problem (PDE: data decomposition), and Hartree-Fock algorithm (task parallelism of distributed data). Describes different features the languages support to express these types of parallelism easily. Provides a decent outline of these languages. Optimistic about new features, but (sensibly) cautions that the languages are not yet mature enough for a reasonable evaluation to long-standing approaches.}
 }
 
-@inproceedings{Elliott:2004,
+@inproceedings{Elliott:2004hh,
 author = {Elliott, Conal},
 title = {{Programming graphics processors functionally}},
 booktitle = {Haskell '04: The 2004 ACM SIGPLAN workshop on Haskell},
@@ -2608,6 +2608,14 @@ year = {2012},
 pages = {21},
 publisher = {ACM Press},
 address = {New York, New York, USA}
+}
+
+@inproceedings{Gill:2011wy,
+author = {Gill, Andy and Bull, Tristan and Kimmell, Garrin and Perrins, Erik and Komp, Ed and Werling, Brett},
+title = {{Introducing Kansas Lava - Springer}},
+booktitle = {IFL '11: The 23rd International Symposium on Implementation and Application of Functional Languages},
+year = {2011},
+pages = {18--35}
 }
 
 @inproceedings{Catanzaro:2011cn,
