--- a/sections/03-design.tex
+++ b/sections/03-design.tex
@@ -668,8 +668,9 @@ about the surface type representation, and certainly, we should not need to
 extend the backend to support user-defined types such as @Point@. The @Elt@
 class tells us how to convert between the surface type of an expression that a
 user programs in, into the \emph{representation} type that an implementation
-stores and computes data in. We use a type family~\cite{Chakravarty:2005dx} of
-nested tuples to represent types as heterogenous snoc-lists of primitive types.
+stores and computes data in. We use a type
+family~\cite{Chakravarty:2005dx,Schrijvers:2008ir} of nested tuples to represent
+types as heterogenous snoc-lists of primitive types.
 %
 \begin{lstlisting}[style=haskell]
 type family EltRepr a :: *
@@ -685,6 +686,107 @@ Here @EltRepr'@ is similar, except that we use a flattened representation at the
 leaves in order to avoid overly nested pairs; that is, primitive types are
 represented as @EltRepr' Int = Int@. Arrays of tuples have a similar mapping
 into a nested tuple of arrays of primitive type.
+
+
+\subsection{Richly typed terms}
+
+As a deeply embedded language, the operations of both the array and scalar
+sub-language do not directly issue computations; instead, they build term trees
+to represent embedded computations (\S\ref{sec:EDSLs}). The terms in the surface
+language use \indexe{higher-order abstract syntax} (HOAS) to embed
+function-valued scalar expressions as well as type class overloading to reflect
+arithmetic expressions. For example, the body of the @dotp@ function
+% @fold (+) 0 (zipWith (*) xs' ys')@
+is translated into:\footnote{The subterms to \footcode{add} and \footcode{mul}
+here are inline into the term, we only use a \footcode{where}-clause to improve
+readability.}
+%
+\begin{lstlisting}[style=haskell]
+  Fold add (Const 0) (ZipWith mul xs' ys')
+  where
+    add = \x y -> PrimAdd (FloatingNumType (TypeFloat FloatingDict))               -- (1)
+                  `PrimApp`
+                  Tuple (NilTup `SnocTup` x
+                                `SnocTup` y)
+    mul = %$\langle$ ... as \texttt{add}, but using \texttt{PrimMul} ... $\rangle$
+\end{lstlisting}
+%
+This is very much like the approach taken by \citet{Elliott:2004hh},
+\citet{Gill:2011wy}, and \citet{Mainland:2010vj}. The difference is that in our
+approach we use GADTs~\cite{Jones:2006eh} and type
+families~\cite{Chakravarty:2005dx,Schrijvers:2008ir} to preserve the embedded
+program's type information in the term tree (1), and use type-preserving
+transformations in the front end (\S\ref{sec:manipulating_embedded_programs}).
+
+The HOAS representation, while convenient for a human human reader, is awkward
+for program transformations as it complicates looking under lambdas; i.e.
+inspecting and manipulating the bodies of function abstractions. After the
+frontend reifies the embedded program using HOAS, it recovers sharing
+(\S\ref{sec:sharing_recovery}) while converting the HOAS representation into a
+\emph{nameless} representation using \emph{typed de Bruijn indices} in the style
+of~\citet{Altenkirch:2003kz}. The type preserving conversion from HOAS to a
+nameless de Bruijn representation using GADTs~\cite{Chakravarty:2009uo} was
+simultaneously discovered by~\citet{Atkey:2009dj}.
+
+Overall, the nameless form of @dotp@ is:
+%
+\begin{lstlisting}[style=haskell]
+  Fold add (Const 0) (ZipWith mul xs' ys')
+  where
+    add = Lam (Lam (Body (
+        PrimAdd (FloatingNumType (TypeFloat FloatingDict))
+                `PrimApp`
+                Tuple (NilTup `SnocTup` (Var (SuccIdx ZeroIdx))
+                              `SnocTup` (Var ZeroIdx)))))
+    mul = %$\langle$ ... as \texttt{add}, but using \texttt{PrimMul} ... $\rangle$
+\end{lstlisting}
+%
+The @Lam@ constructor introduces nameless abstractions and @Var@ wraps a de
+Bruijn index. At this point, the program is further optimised by the frontend,
+for example by applying the fusion transformation~(\S\ref{sec:array_fusion}).
+
+Finally, we represent the environment as a heterogenous snoc-list, encoded on
+the type level as nested pairs and building this list on the value level with
+the two constructors:
+%
+\begin{lstlisting}[style=haskell]
+data Val env where
+  Empty :: Val ()
+  Push  :: Val env -> t -> Val (env, t)
+\end{lstlisting}
+%
+A nameless de Bruijn index projects out a specific type from the environment:
+%
+\begin{lstlisting}[style=haskell]
+data Idx env t where                            -- an index is either\ldots
+  ZeroIdx ::              Idx (env, t) t        -- \ldots at the top of the stack, or\ldots
+  SuccIdx :: Idx env t -> Idx (env, s) t        -- \ldots under some junk
+\end{lstlisting}
+%
+Indices have type @Idx env t@, where the type @env@ keeps track of what
+variables are in scope using the same encoding of nested tuples used by the
+environment, while @t@ represents the type of a distinguished element in this
+list. At the value level, @Idx@ encodes the index of that element in the list.
+
+As terms are pushed into the environment, the type of the new term becomes
+wrapped in the type of the environment; i.e. @t@ is existentially quantified in
+@Push@. Our de Bruijn indices recover the wrapped type of individual elements by
+projecting the index through the environment:
+%
+\begin{lstlisting}[style=haskell]
+prj :: Idx env t -> Val env -> t
+prj ZeroIdx       (Push _   v) = v
+prj (SuccIdx idx) (Push val _) = prj idx val
+prj _             _            = error "inconsistent valuation"
+\end{lstlisting}
+
+\marginnote{tk: use Let/Alet constructor as further example?}
+Overall, this is an example of using nested datatypes and polymorphic recursion
+to precisely enforce constraints and invariants in the type of a term; in this
+case the type and scope of bound terms. Since an embedded Accelerate program is
+constructed and evaluated at program \emph{runtime}, encoding properties in the
+type means that these invariants are checked at \emph{compile} time, reducing
+the number of possible runtime errors in type-correct programs.
 
 
 
