--- a/preamble.tex
+++ b/preamble.tex
@@ -238,6 +238,10 @@
     frame=none,
     numbers=none,
     basicstyle=\ttfamily,
+    keywordstyle=[1],
+    keywordstyle=[2],
+    keywordstyle=[3],
+    keywordstyle=[4],
     literate=
         {\\}{{$\lambda$}}1
         {\\\\}{{\char`\\\char`\\}}1
