--- a/thesis.bib
+++ b/thesis.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Fri, 29 Nov 2013.
+%% Created using Papers on Sun, 01 Dec 2013.
 %% http://papersapp.com/papers/
 
 @book{Altenkirch:2003kz,
@@ -1440,7 +1440,7 @@ publisher = {ACM},
 address = {New York, NY, USA}
 }
 
-@inproceedings{Sweeney:2009,
+@inproceedings{Sweeney:2009ua,
 author = {Sweeney, Tim},
 title = {{The End of the GPU Roadmap}},
 booktitle = {High Performance Graphics},
