--- a/sections/03-design.tex
+++ b/sections/03-design.tex
@@ -819,7 +819,7 @@ This section explores some of these approaches.
 
 Vertigo~\cite{Elliott:2004hh} is an embedded language in Haskell for GPGPU
 programming. Vertigo is a statically compiled graphics language targeting the
-DirectX 9 shader model, and does not offer higher-order combinators such as
+DirectX 8.1 shader model, and does not offer higher-order combinators such as
 @map@ and @fold@.
 
 Obsidian~\cite{Svensson:2008a} and Nikola~\cite{Mainland:2010vj} are also
@@ -835,17 +835,17 @@ implemented in a single GPU kernel. Algorithms spanning multiple kernels need to
 be explicitly scheduled by the application programmer and incur additional
 host-device data transfer overhead, which can be rather significant.
 
-\marginnote{tk: to related work for fusion?}
-Recent versions of Obsidian~\cite{Claessen:2012hl} implement
-Repa-style~\cite{Keller:2010er} delayed \emph{pull arrays} as well as \emph{push
-arrays}. Whereas a pull array represents a general producer, a push array
-represents a general consumer. Pull arrays allow intermediate programs to be
-written in continuation passing style (CPS)\index{continuation passing style},
-which helps to compile (and fuse) append-like operations.
+% \marginnote{tk: to related work for fusion?}
+% Recent versions of Obsidian~\cite{Claessen:2012hl} implement
+% Repa-style~\cite{Keller:2010er} delayed \emph{pull arrays} as well as \emph{push
+% arrays}. Whereas a pull array represents a general producer, a push array
+% represents a general consumer. Pull arrays allow intermediate programs to be
+% written in continuation passing style (CPS)\index{continuation passing style},
+% which helps to compile (and fuse) append-like operations.
 
-Baracuda~\cite{Larsen:2011fa} is another Haskell EDSL producing CUDA GPU
-kernels, though it is intended to be used offline, with the kernels called
-directly from a C++ application.
+Baracuda~\cite{Larsen:2011fa} is a Haskell EDSL producing CUDA GPU kernels,
+though it is intended to be used offline, with the kernels called directly from
+a C++ application.
 
 Paraiso~\cite{Muranushi:2012eh} is a Haskell EDSL for solving systems of
 \indext{partial differential equation}s (PDEs), such as hydrodynamics equations,
@@ -854,6 +854,32 @@ for multicore CPUs. Accelerate supports @stencil@ operations for expressing this
 type of operation, but currently lacks a backend for multicore CPUs. Paraiso
 also includes an automated tuning framework to search for faster implementations
 of the algorithm.
+
+\paragraph{C++-based approaches}
+
+Accelerator~\cite{Bond:2010bd,Tarditi:2006} is a library-based approach with
+less syntactic sugar for the programmer, but bindings to functional languages.
+In contrast to our current work, it already targets multiple architectures,
+namely GPUs, FPGAs, and multicore CPUs. However, the code generated for GPUs
+uses the DirectX 9 API, which does not provide access to several modern GPU
+features, negatively impacting performance and preventing some operations such
+as scatted writes (in Accelerate, the forward @permute@ operation).
+
+RapidMind~\cite{LinXu:2008ig}, which targets the GPU using OpenCL, and its
+predecessor Sh~\cite{McCool:2004,McCool:2004un} which used pixel shaders of the
+graphics API, are C++ meta programming libraries for data parallel programming.
+RapidMind was merged into Intel's Ct compiler to create the Array Building
+Blocks (ArBB) library. However, the ArBB project was retired before support for
+GPUs was integrated. GPU++~\cite{Jansen:2008vw} is an embedded language in C++
+using similar techniques to RapidMind and Sh, but provides a more abstract
+interface than the other C++ based methods listed here.
+
+\citet{Sato:2009cq} describe a C++ skeleton library for GPGPU programming that
+includes a fusion mechanism. Finally, Thrust~\cite{ThrustAParallelT:ub} is a
+library of algorithms written in CUDA, with an interface similar to the C++
+Standard Template Library.
+
+
 
 
 \endinput
