--- a/thesis.bib
+++ b/thesis.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Sun, 01 Dec 2013.
+%% Created using Papers on Mon, 02 Dec 2013.
 %% http://papersapp.com/papers/
 
 @book{Altenkirch:2003kz,
@@ -2644,6 +2644,41 @@ title = {{Deconstraining DSLs}},
 booktitle = {ICFP '12: The 17th ACM SIGPLAN international conference on Functional programming},
 year = {2012},
 organization = {Department of Computing, Imperial College London}
+}
+
+@inproceedings{Bond:2010bd,
+author = {Bond, Barry and Hammil, Kerry and Litchev, Lubomir and Singh, Satnam},
+title = {{FPGA Circuit Synthesis of Accelerator Data-Parallel Programs}},
+booktitle = {FCCM '10: The 18th IEEE Annual International Symposium on Field-Programmable Custom Computing Machines},
+year = {2010},
+pages = {167--170},
+publisher = {IEEE},
+month = may
+}
+
+@inproceedings{LinXu:2008ig,
+author = {Lin Xu and Wan, Justin W L},
+title = {{Real-time intensity-based rigid 2D-3D medical image registration using RapidMind Multicore Development Platform}},
+booktitle = {EMBS '08: The 30th Annual International Conference of the IEEE Engineering in Medicine and Biology Society},
+year = {2008},
+pages = {5382--5385},
+publisher = {IEEE},
+month = aug
+}
+
+@book{McCool:2004un,
+author = {McCool, Michael D and Du Toit, Stefanus},
+title = {{Metaprogramming GPUs with Sh}},
+publisher = {A. K. Peters/CRC Press},
+year = {2004},
+month = aug
+}
+
+@phdthesis{Jansen:2008vw,
+author = {Jansen, Thomas},
+title = {{GPU++: An Embedded GPU Development System for General-Purpose Computations}},
+school = {Technische Universit\"at M\"unchen},
+year = {2008}
 }
 
 @inproceedings{Hinze:2010ub,
