--- a/thesis.bib
+++ b/thesis.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Mon, 02 Dec 2013.
+%% Created using Papers on Tue, 03 Dec 2013.
 %% http://papersapp.com/papers/
 
 @book{Altenkirch:2003kz,
@@ -2679,6 +2679,16 @@ author = {Jansen, Thomas},
 title = {{GPU++: An Embedded GPU Development System for General-Purpose Computations}},
 school = {Technische Universit\"at M\"unchen},
 year = {2008}
+}
+
+@article{CLyther:EvXSiruK,
+title = {{CLyther}},
+year = {2010}
+}
+
+@article{NumPy:2006uq,
+title = {{NumPy}},
+year = {2006}
 }
 
 @inproceedings{Hinze:2010ub,
