--- a/thesis.bib
+++ b/thesis.bib
@@ -2691,6 +2691,16 @@ title = {{NumPy}},
 year = {2006}
 }
 
+@inproceedings{Rossbach:2013bj,
+author = {Rossbach, Christopher J and Yu, Yuan and Currey, Jon and Martin, Jean-Philippe and Fetterly, Dennis},
+title = {{Dandelion: A compiler and runtime for heterogenous sytems}},
+booktitle = {SOSP '13: The 24th ACM Symposium on Operating Systems Principles},
+year = {2013},
+pages = {49--68},
+publisher = {ACM Press},
+address = {New York, New York, USA}
+}
+
 @inproceedings{Hinze:2010ub,
 author = {Hinze, Ralf},
 title = {{Type fusion}},
